--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -106,19 +106,19 @@
   }
 }
 
-/* Mobile 375px*/
-@media screen and (max-width: 375px) {
+/* Mobile 390px*/
+@media screen and (max-width: 390px) {
   .container .h-name {
     margin-top: 10%;
     margin-bottom: 50px;
   }
 
   .container .h-name h1 {
-    font-size: 28px;
+    font-size: 26px;
   }
 
   .container .h-name h2 {
-    font-size: 28px;
+    font-size: 24px;
   }
 
   /* Sobre */
@@ -164,6 +164,128 @@
   .container .h-experiencia .h-itens .item .description h2 {
     text-align: center;
     margin-bottom: 20px;
+    font-size: 24px;
+  }
+
+  .container .h-experiencia .h-itens .item .work h2 {
+    text-align: center;
+  }
+
+  .container .h-experiencia .h-itens .item .work p {
+    text-align: center;
+  }
+
+  /* Educação */
+  .container .h-educacao .h-title-educacao h2 {
+    margin-top: 5%;
+    font-size: 22px;
+  }
+
+  .container .h-educacao .item {
+    margin-bottom: 50px;
+  }
+
+  .container .h-educacao .item .title {
+    margin-bottom: 20px;
+  }
+
+  .container .h-educacao .item .title h2 {
+    font-size: 22px;
+  }
+
+  .container .h-educacao .item .title span {
+    font-size: 22px;
+  }
+
+  /* Habilidades */
+  .container .h-habilidades .h-habilidades-title h2 {
+    margin-top: 5%;
+    font-size: 22px;
+  }
+
+  .container .h-habilidades .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .container .h-habilidades .item .title {
+    min-width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .container .h-habilidades .item .icon {
+    width: 100%;
+  }
+
+  /* Contato */
+  .container .h-contato .h-title-contato h2 {
+    margin-top: 5%;
+    font-size: 22px;
+  }
+}
+
+/* Mobile 375px*/
+@media screen and (max-width: 375px) {
+  .container .h-name {
+    margin-top: 10%;
+    margin-bottom: 50px;
+  }
+
+  .container .h-name h1 {
+    font-size: 24px;
+  }
+
+  .container .h-name h2 {
+    font-size: 22px;
+  }
+
+  /* Sobre */
+  .container .h-sobre {
+    width: 100%;
+    min-height: 100px;
+    margin-bottom: 50px;
+  }
+
+  .container .h-sobre .h-title-sobre h2 {
+    margin-top: 5%;
+    font-size: 22px;
+  }
+
+  .container .h-sobre .paragraf {
+    font-size: 18px;
+  }
+
+  /* Experiencias */
+  .container .h-experiencia .h-title-expericencia h2 {
+    margin-top: 5%;
+    font-size: 22px;
+  }
+
+  .container .h-experiencia .h-itens .item {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 220px;
+    margin-bottom: 50px;
+  }
+
+  .container .h-experiencia .h-itens .item .work {
+    min-width: 100%;
+    min-height: 80px;
+  }
+
+  .container .h-experiencia .h-itens .item .description {
+    width: 100%;
+    min-height: 100px;
+  }
+
+  .container .h-experiencia .h-itens .item .description h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 22px;
   }
 
   .container .h-experiencia .h-itens .item .work h2 {
